<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Create your account"
            android:textSize="20sp"
            android:textStyle="italic" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/myborder2"
            android:textColorHint="@android:color/black">

            <EditText
                android:id="@+id/fstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FstName"
                android:textColor="@android:color/black"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/myborder2"
            android:textColorHint="@android:color/black">

            <EditText
                android:id="@+id/lstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LstName"
                android:textColor="@android:color/black"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/myborder2"
            android:textColorHint="@android:color/black">

            <EditText
                android:id="@+id/passwrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:textColor="@android:color/black"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/myborder2"
            android:textColorHint="@android:color/black">

            <EditText
                android:id="@+id/emailaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailadd"
                android:textColor="@android:color/black"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/myborder2"
            android:textColorHint="@android:color/black">

            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:textColor="@android:color/black"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnsign"
            android:layout_width="210dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#8a2be2"
            android:text="@string/signUp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:text="Already have an account?"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@+id/text1"
                android:text="Sign In"
                android:textColor="#0000cd" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>